--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -106,7 +106,25 @@
           <% end %>
           <div class="border-t border-gray-700 my-4"></div>
 
+          <% if menu_project %>
+            <%= link_to project_settings_path(menu_project, anchor: "slack-integration"),
+                class: "flex items-center px-4 py-3 text-gray-300 rounded-lg hover:bg-gray-800 hover:text-white transition-colors #{'bg-gray-800 text-white' if current_page?(project_settings_path(menu_project))}" do %>
 
+              <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11
+                    a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341
+                    C7.67 6.165 6 8.388 6 11v3.159
+                    c0 .538-.214 1.055-.595 1.436L4 17h5
+                    m6 0v1a3 3 0 11-6 0v-1m6 0H9"
+                />
+              </svg>
+              Alerts
+            <% end %>
+          <% end %>
 
           <% base_settings_path = defined?(@current_project) && @current_project ? "/#{@current_project.slug}/settings" : settings_path %>
           <%= link_to base_settings_path,
