update invitation logic

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -246,7 +246,7 @@
                     <div class="text-sm font-medium text-gray-900">
                       <%= current_user&.email&.split("@")&.first&.capitalize || "Admin" %>
                     </div>
-                    <div class="text-xs text-gray-500">Administrator</div>
+                    <div class="text-xs text-gray-500"><%= current_user&.role&.capitalize %></div>
                   </div>
                   <svg class="w-4 h-4 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
