--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,6 +49,13 @@
     </div>
   </div>
 
+  <div>
+    <%= f.label :role, class: "block text-sm font-medium text-gray-700 mb-2" %>
+    <div class="relative">
+      <%= f.select :role, User::ROLES.map { |r| [r.titleize, r] }, { required: true }, class: "block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" %>
+    </div>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
