update deploys page

--- a/app/views/deploys/index.html.erb
+++ b/app/views/deploys/index.html.erb
@@ -31,7 +31,7 @@
                 <%= deploy.release.version %>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                <%= deploy.user&.email || "—" %>
+                <%= deploy.account&.name || "—" %>
               </td>
               <td class="px-6 py-4 whitespace-nowrap">
                 <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium <%= deploy[:status] == 'success' ? 'bg-green-100 text-green-800' : 'bg-red-100 text-red-800' %>">
