--- a/app/views/deploys/index.html.erb
+++ b/app/views/deploys/index.html.erb
@@ -35,7 +35,7 @@
                 </span>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                <%= deploy.live_for_human %>
+                <%= live_for_human(deploy) %>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                 <%= time_ago_in_words(deploy.started_at) %> ago
