Refactor alert notifications

--- a/app/views/alert_mailer/alert_notification.html.erb
+++ b/app/views/alert_mailer/alert_notification.html.erb
@@ -96,7 +96,7 @@
 
               <td valign="middle" style="text-align:left;">
                 <div style="font-size:18px; font-weight:700; line-height:1.2; margin:0; color:#ffffff;">
-                  🚨 ActiveRabbit Alert
+                  ActiveRabbit Alert
                 </div>
                 <div style="font-size:13px; line-height:1.2; margin-top:4px; opacity:0.9; color:#ffffff;">
                   Project: <%= @project.name %>
@@ -115,7 +115,7 @@
     </div>
 
     <div class="button-wrapper">
-      <a href="<%= @project_errors_url %>" class="button">
+      <a href="<%= @dashboard_url %>" class="button">
         <p class="button-text">View in ActiveRabbit Dashboard</p>
       </a>
     </div>
